<resources>
    <string name="app_name">FullStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_registered">Not registered?</string>
    <string name="app_icon">App Icon</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="error_message">Error, please check the entered fields</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="success_message">Registration successful! Please log in.</string>
    <string name="already_registered">Already Registered? Login</string>
    <string name="go_login">Go Login  </string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_request_reset">Send Reset Request</string>
    <string name="identification_number">Identification Number</string>
    <string name="all_brands">All Brands</string>
    <string name="bike_model_title">Bike Model</string>
    <string name="bike_image_description">Image of the bike</string>
    <string name="bike_short_description">Brief description of the bike</string>
    <string name="bike_price">Price: $00.00</string>
    <string name="view_details_button">View Details</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Price: $XX.XX</string>
    <string name="add_button">Add</string>
    <string name="remove_button">Remove</string>
    <string name="tab_title">Tab Title</string>
    <string name="checkout">Checkout</string>
    <string name="empty_cart">Your Cart is Empty</string>
    <string name="conversation_name">Conversation Name</string>
    <string name="new_conversation">New Conversation</string>
    <string name="logout">LOGOUT</string>
    <string name="confirm">confirm</string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="example">Example :</string>
    <string name="card_number_4242_4242_4242_4242">Card Number: 4242 4242 4242 4242</string>
    <string name="expiration_date_12_25">Expiration Date: 12/25</string>
    <string name="cvc_123">CVC: 123</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="product_image">Product Image</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="purchase_id">Purchase ID:</string>
    <string name="date">Date:</string>
    <string name="total_amount">Total Amount:</string>
    <string name="items_purchased">Items Purchased:</string>
    <string name="button">Button</string>
    <string name="update_user_information">Update User Information</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="fragment_title">Fragment Title</string>
    <string name="sneaker">sneaker</string>
    <string name="full_store">Full Store</string>
    <string name="we_move">We Move</string>
    <string name="logo">Logo</string>
    <string name="full_store_we_move">Full Store, We Move</string>
    <string name="Nav_home">Home</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_return">Return</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="icon_cart">Cart</string>
    <string name="conversations">Conversations</string>
    <string name="user_info">User Info</string>
    <string name="purchases">Purchases</string>
    <string name="icon_home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="products">PRODUCTS</string>
    <string name="all_products">All Products</string>
    <string name="adidas">Adidas</string>
    <string name="puma">Puma</string>
    <string name="nike">Nike</string>
    <string name="cart">CART</string>
    <string name="all_my_purchases">All My Purchases</string>
    <string name="ex_user">User:</string>
    <string name="ex_invoice_number_123456789">Invoice Number: 123456789</string>
    <string name="ex_total_500_00">Total: $500.00</string>
    <string name="ex_date_07_nov_2024_01_36_pm">Date: 07 Nov 2024, 01:36 PM</string>
    <string name="all_purchases">All Purchases</string>
    <string name="last_message_or_description">Last message or description</string>
    <string name="send_message">Send Message</string>
    <string name="user_example_com">user@example.com</string>
    <string name="example_message">Example Message</string>
    <string name="user_dashboard">User Dashboard</string>
    <string name="fullstore">FullStore</string>


</resources>