<!-- res/menu-land/nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/full_store">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/house_solid"
                android:title="@string/icon_home" />

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/usericon"
                android:title="@string/user_dashboard" />
            <item
                android:id="@+id/cartm"
                android:icon="@drawable/cart"
                android:title="@string/icon_cart" />
            <item
                android:id="@+id/homelist"
                android:icon="@drawable/sneaker"
                android:title="@string/all_products" />
        </menu>
    </item>




</menu>
