<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPurchaseItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:scrollbars="horizontal" />

    <TextView
        android:id="@+id/totalPurchaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/total_0_00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupPaymentMethods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical" />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/card_input_widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/exampleDataLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number_4242_4242_4242_4242" />

        <TextView
            android:id="@+id/textViewExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date_12_25" />

        <TextView
            android:id="@+id/textViewCvc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvc_123" />
    </LinearLayout>

    <Button
        android:id="@+id/confirmPurchaseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_purchase" />

</LinearLayout>
