<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/product_name"
        android:textColor="#1E1E1E"
        android:textSize="22sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/ivProductImage"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/image_background_rounded_corners"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop" />


    <TextView
        android:id="@+id/tvProductDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/product_description"
        android:textColor="#616161"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/product_price"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/add_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:elevation="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!-- Remove Button -->
        <Button
            android:id="@+id/remove_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:elevation="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/remove_button"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
