<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="?android:attr/selectableItemBackground"
    android:padding="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/userTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_user"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/invoiceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_invoice_number_123456789"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_total_500_00"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_date_07_nov_2024_01_36_pm"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
