<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="24dp">

    <FrameLayout
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:elevation="6dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/icon_background" />

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_icon"
            android:scaleType="centerCrop"
            android:src="@drawable/sneaker"
            app:tint="@android:color/black" />
    </FrameLayout>


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/reset_password"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:elevation="2dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/login_re"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/go_login"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_request_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn_background"
        android:elevation="3dp"
        android:padding="16dp"
        android:text="@string/btn_request_reset"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
