<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_conversations_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/conversations"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/et_conversation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/conversation_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />


    <Button
        android:id="@+id/btn_new_conversation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/btn_background"
        android:text="@string/new_conversation"
        android:textColor="@android:color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_conversations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:scrollbars="horizontal" />
</LinearLayout>
